[package]
name = "aws-mfa-enver"
version = "1.0.0"
authors = ["Alexander Nazarov <alexnzarov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
tokio = "1.2.0"
rusoto_core = "0.46.0"
rusoto_sts = "0.46.0"
